# schema_salad

./: .coveragerc  .dockerignore  .flake8  .git-blame-ignore-revs  .gitignore  .guix-run  .mergify.yml  .pylintrc  .readthedocs.yml  .travis.yml  CONTRIBUTING.md  MANIFEST.in  Makefile  README.rst  TODO.md  appveyor.yml  build-schema_salad-docker.sh  cibw-requirements.txt  conftest.py  cwl_v1_2.py  dev-requirements.txt  gittaggers.py  lgtm.yml  lint-requirements.txt  manual_wheel_publish.sh  mypy-requirements.txt  mypy.ini  mypy_requirements.txt  pyproject.toml  release-test.sh  requirements.txt  rtd_requirements.txt  schema_salad.Dockerfile  setup.cfg  setup.py  test-requirements.txt  tox.ini
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: ci-tests.yml  codeql-analysis.yml  quay-publish.yml  wheel-prep.sh  wheels.yml
docs/: cli.rst  conf.py  index.rst  modules.rst  schema_salad.avro.rst  schema_salad.avro.schema.rst  schema_salad.codegen.rst  schema_salad.codegen_base.rst  schema_salad.exceptions.rst  schema_salad.java_codegen.rst  schema_salad.jsonld_context.rst  schema_salad.main.rst  schema_salad.makedoc.rst  schema_salad.metaschema.rst  schema_salad.python_codegen.rst  schema_salad.python_codegen_support.rst  schema_salad.ref_resolver.rst  schema_salad.rst  schema_salad.schema.rst  schema_salad.sourceline.rst  schema_salad.tests.matcher.rst  schema_salad.tests.rst  schema_salad.tests.test_cg.rst  schema_salad.tests.test_cli_args.rst  schema_salad.tests.test_errors.rst  schema_salad.tests.test_examples.rst  schema_salad.tests.test_fetch.rst  schema_salad.tests.test_fp.rst  schema_salad.tests.test_print_oneline.rst  schema_salad.tests.test_real_cwl.rst  schema_salad.tests.test_ref_resolver.rst  schema_salad.tests.util.rst  schema_salad.utils.rst  schema_salad.validate.rst  typeshed.rst
example/: complexTypes.yaml  emptyTypes.yaml  myschema.yaml  simpleTypes.yaml  values.yaml
mypy-stubs/: typing.pyi
mypy-stubs/cachecontrol/: cache.pyi  controller.pyi  wrapper.pyi
mypy-stubs/cachecontrol/caches/: __init__.pyi  file_cache.pyi
mypy-stubs/mistune/: __init__.pyi  __init__.pyi.orig  _types.pyi  block_parser.pyi  block_parser.pyi.orig  core.pyi  helpers.pyi  inline_parser.pyi  inline_parser.pyi.orig  list_parser.pyi  markdown.pyi  markdown.pyi.orig  renderers.pyi  scanner.pyi  scanner.pyi.orig  toc.pyi  util.pyi
mypy-stubs/mistune/directives/: __init__.pyi  _base.pyi  _fenced.pyi  _rst.pyi  admonition.pyi  image.pyi  include.pyi  toc.pyi
mypy-stubs/mistune/plugins/: __init__.pyi  abbr.pyi  def_list.pyi  footnotes.pyi  formatting.pyi  math.pyi  ruby.pyi  speedup.pyi  spoiler.pyi  table.pyi  task_lists.pyi  url.pyi
mypy-stubs/mistune/renderers/: _list.pyi  html.pyi  markdown.pyi  rst.pyi
mypy-stubs/rdflib/: compare.pyi  exceptions.pyi  graph.pyi  paths.pyi  plugin.pyi  query.pyi  resource.pyi  term.pyi  util.pyi
mypy-stubs/rdflib/namespace/: __init__.pyi
paper/: draft.md
schema_salad/: __init__.py  __main__.py  _version.py  add_dictlist.py  aslist.py  codegen.py  codegen_base.py  cpp_codegen.py  dlang_codegen.py  dotnet_codegen.py  exceptions.py  fetcher.py  flatten.py  java_codegen.py  jsonld_context.py  main.py  makedoc.py  metaschema.py  python_codegen.py  python_codegen_support.py  ref_resolver.py  rust_codegen.py  schema.py  sourceline.py  typescript_codegen.py  utils.py  validate.py
schema_salad/avro/: __init__.py  datafile.py  io.py  ipc.py  protocol.py  schema.py  tool.py  txipc.py
schema_salad/dotnet/: Project.csproj  gitignore
schema_salad/dotnet/Test/: Test.csproj
schema_salad/dotnet/util/: Fetcher.cs  LoaderInstances.cs  LoadingOptions.cs  Savable.cs  UriExtensions.cs  (+2 more)
schema_salad/java/: README.md  pom.xml
schema_salad/metaschema/: ident_res.yml  metaschema.yml  metaschema_base.yml  salad.md
schema_salad/rust/: Cargo.toml
schema_salad/rust/salad-core/: .gitignore  Cargo.toml
schema_salad/rust/salad-core/crates/serde/: Cargo.toml
schema_salad/rust/salad-core/crates/serde/src/de/: data.rs  list.rs  map.rs  mod.rs
schema_salad/rust/salad-core/crates/types/: Cargo.toml
schema_salad/rust/salad-core/crates/types/src/: lib.rs
schema_salad/rust/salad-core/crates/types/src/any/: de.rs  mod.rs  object.rs
schema_salad/rust/salad-core/crates/types/src/common/: mod.rs  names.rs  primitive_type.rs
schema_salad/rust/salad-core/crates/types/src/primitive/: mod.rs  string.rs
schema_salad/rust/salad-core/crates/types/src/util/: macros.rs  mod.rs
schema_salad/rust/salad-core/src/: lib.rs
schema_salad/tests/: EDAM.owl  a_fetcher.py  basket.yml  basket_schema.yml  conftest.py  count-lines6-wf_v1_2.cwl  cwl-pre.yml  cwl_v1_0.py  cwl_v1_1.py  cwl_v1_2.py  inherited-attributes.yml  matcher.py  memory-leak-check.py  metaschema-pre.yml  other_fetchers.py  test_avro_names.py  test_cg.py  test_cli_args.py  test_codegen_errors.py  test_cpp_codegen.py  test_cwl11.py  test_dlang_codegen.py  test_dotnet_codegen.py  test_enums.py  test_errors.py  test_examples.py  test_fetch.py  test_fp.py  test_java_codegen.py  test_line_numbers.py  test_makedoc.py  test_misc.py  test_outputs_before_inputs.cwl  test_pickling.py  test_print_oneline.py  test_python_codegen.py  test_real_cwl.py  test_ref_resolver.py  test_schema.py  test_schemas_directive.py  (+6 more)
schema_salad/typescript/: index.ts  package.json  tsconfig.json
src/schema_salad/: codegen.py  codegen_base.py  cpp_codegen.py  dlang_codegen.py  exceptions.py  main.py  makedoc.py  metaschema.py  python_codegen.py  python_codegen_support.py  runtime.py  schema.py  validate.py
tests/: test.yml  test_examples.py
typeshed/: typing.pyi
typeshed/2.7/: sys.pyi  urlparse.pyi
typeshed/2and3/: mistune.pyi
typeshed/black/: __init__.pyi  cache.pyi  concurrency.pyi  const.pyi  debug.pyi  handle_ipynb_magics.pyi  mode.pyi  output.pyi  report.pyi  strings.pyi
typeshed/cachecontrol/: adapter.pyi  wrapper.pyi
typeshed/rdflib/: __init__.pyi  graph.pyi  namespace.pyi  parser.pyi  paths.pyi  plugin.pyi  query.pyi  serializer.pyi  store.pyi  term.pyi  util.pyi
typeshed/urllib/: parse.pyi
(+188 files in other folders)
