[build-system]
requires = [
    "setuptools>=50",  # 50 is to match mypyc's minimum
    "setuptools_scm[toml]>=8.0.4,<9",
    'mypy[mypyc]==1.11.2',  # update mypy-requirements as well
    "black>=19.10b0,<23.12",
    "types-requests",
    "types-dataclasses",
    "importlib_resources>=1.4;python_version<'3.9'",
    "ruamel.yaml>=0.17.6, < 0.19",
    "types-setuptools",
    "CacheControl[filecache] >= 0.13.1, < 0.15"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "schema_salad/_version.py"

[tool.cibuildwheel]
test-command = "python -m pytest -n 2 --junitxml={project}/test-results/junit_$(python -V | awk '{print $2}')_${AUDITWHEEL_PLAT}.xml --pyargs schema_salad"
test-requires = "-r test-requirements.txt"
test-extras = "pycodegen"
skip = "pp* cp313-*"
#      ^ skip building wheels on PyPy (any version)
#           ^ skip build python 3.13 wheels (mypyc isn't ready yet)
build-verbosity = "1"
environment = { SCHEMA_SALAD_USE_MYPYC="1", MYPYPATH="$(pwd)/mypy-stubs" }

[tool.black]
line-length = 100
target-version = [ "py38" ]
