[build-system]
requires = [
    "setuptools>=50",  # 50 is to match mypyc's minimum
    "setuptools_scm[toml]>=8.0.4,<10",
    'mypy[mypyc]==1.19.0',  # update mypy-requirements as well
    "black>=19.10b0,<26.2",
    "types-requests",
    "types-dataclasses",
    "ruamel.yaml>=0.17.6, < 0.19",
    "types-setuptools",
    "CacheControl[filecache] >= 0.14.0, < 0.15",
    "rich-argparse",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "schema_salad/_version.py"

[tool.cibuildwheel]
test-command = "python -m pytest -n auto --junitxml={project}/test-results/junit_$(python -V | awk '{print $2}')_${AUDITWHEEL_PLAT}.xml --pyargs schema_salad"
test-requires = "-r test-requirements.txt"
test-extras = "pycodegen"
skip = ["pp*", "cp31?t-*"]
#      ^ skip building wheels on PyPy (any version)
#              ^ https://mypy.readthedocs.io/en/stable/changelog.html#mypyc-partial-unsafe-support-for-free-threading
build-verbosity = 1
environment = { SCHEMA_SALAD_USE_MYPYC="1", MYPYPATH="$(pwd)/mypy-stubs", CCACHE_SLOPPINESS="include_file_ctime,include_file_mtime,locale,time_macros", CCACHE_NOHASHDIR="true" }

[tool.cibuildwheel.linux]
before-all = "apk add ccache || yum install -y ccache || dnf --nogpg -y install https://www.rpmfind.net/linux/opensuse/ports/riscv/tumbleweed/repo/oss/riscv64/ccache-4.11.3-2.3.riscv64.rpm https://www.rpmfind.net/linux/opensuse/ports/riscv/tumbleweed/repo/oss/riscv64/libcpp-httplib0_25-0.25.0-4.1.riscv64.rpm https://www.rpmfind.net/linux/opensuse/ports/riscv/tumbleweed/repo/oss/riscv64/libfmt12-12.1.0-1.1.riscv64.rpm https://www.rpmfind.net/linux/opensuse/ports/riscv/tumbleweed/repo/oss/riscv64/libhiredis1_3_0-1.3.0-1.1.riscv64.rpm https://www.rpmfind.net/linux/opensuse/ports/riscv/tumbleweed/repo/oss/riscv64/libxxhash0-0.8.3-4.1.riscv64.rpm || apt-get install -y --no-install-recommends ccache"

[tool.black]
line-length = 100
target-version = [ "py310" ]
