[package]
name = "salad-types"
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
compact_str = { workspace = true, features = ["serde"] }
fxhash = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
serde_yaml_ng = { workspace = true }
